# llm-wiki-python-application

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  start.sh  unittests.md
app/: config.py  llm.py  main.py  operations.py  prompts.py  schemas.py  tools.py  wiki.py
app/ingest/: __init__.py
app/ingest/pdf/: __init__.py  base.py  pypdf_backend.py
app/static/: app.js  styles.css
app/templates/: index.html
tests/: test_config.py  test_cross_cutting.py  test_ingest_pdf.py  test_llm.py  test_main.py  test_operations.py  test_pdf_extractor.py  test_prompts.py  test_schemas.py  test_tools.py  test_wiki.py  unittests.md
